--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -19,21 +19,22 @@ body{
 }
 
 .callout-container-fluid{
-    height: 100vh;
+    height: 90vh;
     width: 100%;
-    background: url("../images/bombay-groove-color.JPG") no-repeat right top fixed; 
+    background: url("../images/bombay-groove-color.JPG") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
-
-
    display: flex;
    align-items: center;
    justify-content: center;
+    font-family: 'Bebas Neue', cursive;
+    position: relative;
    }
 
-.about-us-container{}
+.about-us-container{
+   }
 
 .showreel-container{}
 
@@ -43,13 +44,32 @@ body{
 
 /* Navbar */
 
-.navbackground-container{
-    background: blue;
+.navbar{
+    font-family: 'Bebas Neue', cursive;
 }
-
 /* Jumbotron */
 
 .jumbotron {
     background-color: transparent;
+    font-family: 'Bebas Neue', cursive;
+    color: white;
+    position: relative;
 }
 
+.jumbotron-header {
+    font-size: 4rem;
+}
+/* About Us */
+
+.about-us{
+    margin: 8rem 2rem;
+}
+
+.about-us-header{
+    font-family: 'Bebas Neue', cursive;
+}
+
+/* showreel */
+.showreel{
+    
+}
