--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -73,6 +73,7 @@ body{
 }
 
 /* showreel */
+
 .showreel{
     
 }
@@ -87,7 +88,32 @@ body{
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     font-weight: 400;
+} 
+
+/* Footer */
+
+footer {
+    background-color: #212529;
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+    min-height: 50px; 
 }
 
-/* Media Queries */
+/* Social Links */
+
+.social-links{ 
+    text-align: center;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 15px 0;
+    border-radius: 50%;
+    line-height:5px;
+    text-align: center;
+    text-justify: center;
+    color: #212529;
+    background: white;
+}
 
