--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -203,6 +203,12 @@ iframe{
 .audio-container-fluid{
     background: rgba(255, 79, 79, 0.75) no-repeat center center fixed;
 }
+
+.watch,
+.listen{
+    margin: 0px;
+    padding: 0px;
+}
 /*-----------------------------------Gallery------------------------------------*/
 
 .jumbotron-gallery-header{
