white line eliminated on gallery and contact page.

--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -200,7 +200,9 @@ iframe{
     margin-right: 0px;
 }
 
-
+.listen-section {
+    padding-top: 3rem;
+}
 .listen{
     margin-top: 0rem;
     color: white;
