Html files validated by w3 validator

--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -243,6 +243,10 @@ iframe{
     padding: 0px;
 }
 
+iframe{
+    border:none;
+ }
+
 /*--------------------------------Repertoire-----------------------------------*/
 .repertoire-container-fluid{
     padding: 6rem;
