--- a/Bombay Groove/assets/css/style.css
+++ b/Bombay Groove/assets/css/style.css
@@ -207,8 +207,8 @@ footer {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
-    Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+    font-family: Interstate, "Lucida Grande", "Lucida Sans Unicode",
+    "Lucida Sans", Garuda, Verdana, Tahoma, sans-serif;
     font-weight: 100;    
     }
 
