--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p{
 .callout-container-fluid{
     height: 90vh;
     width: 100%;
-    background: url("../images/bombay-groove-color.JPG") no-repeat center center fixed; 
+    background: url("bombay-groove-color.JPG") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -311,7 +311,7 @@ iframe{
 .gallery-container-fluid{
     height: 90vh;
     width: 100%;
-    background: url("../images/ark-royal-large-cropped.jpg") no-repeat center center fixed; 
+    background: url("/ark-royal-large-cropped.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
