--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ iframe{
 .gallery-container-fluid{
     height: 90vh;
     width: 100%;
-    background: url("/ark-royal-large-cropped.jpg") no-repeat center center fixed; 
+    background: url("ark-royal-large-cropped.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
