--- a/style.css
+++ b/style.css
@@ -256,6 +256,11 @@ iframe{
     }
 }
 
+@media only screen and (min-width: 1224px){
+    .audio-iframe{
+        width: 100%;
+    }
+}
 /*--------------------------------Repertoire-----------------------------------*/
 .repertoire-container-fluid{
     padding: 6rem;
