--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ p{
     z-index:10;  
 }
 
+/*-------This section is copied from css.tricks.com/perfect-full-page-background-image------*/
+
 .callout-container-fluid{
     height: 90vh;
     width: 100%;
@@ -35,6 +37,8 @@ p{
     font-family: 'Bebas Neue', cursive;
     position: relative;
    }
+
+   /*-------------End of copied code -----------*/
 
 .about-us-container{
    padding: 3rem;
@@ -89,7 +93,7 @@ p{
 }
 .about-us p {
     font-family: 'Roboto', sans-serif;
-    text-align: justify;
+    text-align: left;
 }
 
 /* Quotes */
@@ -104,7 +108,7 @@ p{
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     font-weight: 400;
-    text-align: justify;
+    text-align: left;
     color: white;
 } 
 
@@ -142,15 +146,13 @@ footer {
 }
 
 .social-links li a i {
-    width: 32px;
-    height: 32px;
-    padding: 15px 0;
-    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    padding: 30px 0;
     line-height:4px;
     text-align: center;
     background-color: #343a40;
-    color: #212529;
-    background: white;
+    color: white;
 }
 
 @media only screen and (max-width:600px){
