--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p{
 .callout-container-fluid{
     height: 90vh;
     width: 100%;
-    background: url("bombay-groove-color.JPG") no-repeat center center fixed; 
+    background: url("assets/images/bombay-groove-color.JPG") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
