correct file pathway to style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,13 +187,12 @@ footer {
      padding-top: 1.5rem;
  }
 }
-   
+   /*
 @media only screen and (max-width: 1024px){
     .callout-container-fluid{
         display: none;
     }
-}
-
+} */
 /*--------------------------------------Watch/Listen------------------------------------*/
 
 /* Watch-Listen */
